--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>分组管理表格</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/webtorrent@latest/webtorrent.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/simple-peer@9.11.0/simplepeer.min.js"></script>
 </head>
 <body>
     <div class="container">
         <header>
             <h1>中国近现代史纲要分组</h1>
+            <!-- P2P连接状态显示 -->
+            <div class="connection-info">
+                <div id="connection-status">正在连接网络...</div>
+                <div id="room-info">
+                    <input type="text" id="room-id" placeholder="输入房间ID（多用户需要相同ID）" value="default-room">
+                    <button id="join-room" class="primary-btn">加入房间</button>
+                </div>
+                
+            </div>
         </header>
 
         <main>
@@ -48,6 +59,13 @@
                 </div>
                 <div id="ungrouped-list" class="ungrouped-list">
                     <!-- 未分组成员将在此动态生成 -->
+                </div>
+            </div>
+
+            <div id="connected-peers">
+                <h3>已连接用户</h3>
+                <div id="peer-list" class="peer-list">
+                    <!-- 连接的用户将在此显示 -->
                 </div>
             </div>
         </main>
